--- a/src/components/textfield/Textfield.sass
+++ b/src/components/textfield/Textfield.sass
@@ -1,8 +1,22 @@
 @use 'styles/_variables' as *
 
-input
-  width: 100%
-  border-radius: $border-radius
-  padding: .5rem
-  padding-left: 28px
+.textfield-root
+  position: relative
+  display: flex
+  flex-direction: row
+  align-items: center
+
+  .textfield-input-adornment
+    position: absolute
+    left: .5rem
+    color: $dark-gray
+
+  .textfield-input
+    width: 100%
+    border-radius: $border-radius
+    padding: .75rem
+    padding-left: 2.5rem
+    background: $light-gray
+    border: none
+    user-select: none
   
