implement login form

--- a/src/components/button/Button.sass
+++ b/src/components/button/Button.sass
@@ -2,8 +2,11 @@
 
 .button 
   border-radius: $border-radius
-  padding: 1rem 2rem
+  padding: .75rem 2rem
   font-weight: 700
+  border: none
+  text-transform: uppercase
+  cursor: pointer
 
   &.primary
     background: $blue
