--- a/src/styles/_baseline.sass
+++ b/src/styles/_baseline.sass
@@ -1,6 +1,15 @@
+@use './_variables' as *
+
 *
   margin: 0
-  padding: 0 
+  padding: 0
 
-html
+body
   font-family: sans-serif
+  color: $dark-gray
+
+.error-helper
+  color: red
+  font-size: 10px
+  text-transform: uppercase
+  letter-spacing: .75px 
