implement login screen

--- a/src/components/login-form/LoginForm.sass
+++ b/src/components/login-form/LoginForm.sass
@@ -8,6 +8,7 @@
   padding: 2rem 1rem
   border-radius: $border-radius
   box-shadow: 5px 5px 2px $shadow
+  background: $white
 
   .fields
     > :first-child
