--- a/src/components/devices/Devices.sass
+++ b/src/components/devices/Devices.sass
@@ -19,9 +19,9 @@
     text-align: center
     text-transform: uppercase
     width: 150px
-    font-size: 1.5rem
+    font-size: 1.25rem
 
-    span
+    &::first-letter
       font-size: 4rem
 
   .devices-anchor
