--- a/src/screens/devices/DevicesScreen.sass
+++ b/src/screens/devices/DevicesScreen.sass
@@ -5,3 +5,13 @@
   justify-content: center
   align-items: center
   background-color: $orange
+
+  footer
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
+    padding: 1rem
+    display: flex
+    justify-content: center
+    background: rgba($dark-gray, .25)
