fix label styling and test

--- a/src/components/devices/Devices.sass
+++ b/src/components/devices/Devices.sass
@@ -21,14 +21,14 @@
     width: 150px
     font-size: 1.25rem
 
-    &::first-letter
+    span
       font-size: 4rem
 
   .devices-anchor
     width: 400px
     height: 400px
     position: absolute
-    animation: rotate 4s linear infinite
+    animation: rotate 5s linear infinite
 
     .device
       display: inline-block
